// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComboboxAriaAttributes() > should return correct aria attributes when closed and not required 1`] = `
{
  "aria-controls": "dropdown-id",
  "aria-describedby": "message-id description-id",
  "aria-expanded": "false",
  "aria-haspopup": "listbox",
  "aria-labelledby": "label-id",
  "aria-required": "false",
}
`;

exports[`getComboboxAriaAttributes() > should return correct aria attributes when open, required, with all IDs 1`] = `
{
  "aria-controls": "dropdown-id",
  "aria-describedby": "message-id description-id",
  "aria-expanded": "true",
  "aria-haspopup": "listbox",
  "aria-labelledby": "label-id",
  "aria-required": "true",
}
`;

exports[`getComboboxAriaAttributes() > should return correct aria attributes with empty labelId 1`] = `
{
  "aria-controls": "dropdown-id",
  "aria-describedby": "message-id description-id",
  "aria-expanded": "false",
  "aria-haspopup": "listbox",
  "aria-labelledby": null,
  "aria-required": "false",
}
`;

exports[`getComboboxAriaAttributes() > should return correct aria attributes with empty messageId and descriptionId 1`] = `
{
  "aria-controls": "dropdown-id",
  "aria-describedby": null,
  "aria-expanded": "true",
  "aria-haspopup": "listbox",
  "aria-labelledby": "label-id",
  "aria-required": "false",
}
`;

exports[`getListboxAriaAttributes() > should return correct aria attributes when not required and not multiselectable 1`] = `
{
  "aria-describedby": "message-id description-id",
  "aria-labelledby": "label-id",
  "aria-multiselectable": "false",
  "aria-required": "false",
  "role": "listbox",
}
`;

exports[`getListboxAriaAttributes() > should return correct aria attributes when required and multiselectable, with all IDs 1`] = `
{
  "aria-describedby": "message-id description-id",
  "aria-labelledby": "label-id",
  "aria-multiselectable": "true",
  "aria-required": "true",
  "role": "listbox",
}
`;

exports[`getListboxAriaAttributes() > should return correct aria attributes with empty labelId 1`] = `
{
  "aria-describedby": "message-id description-id",
  "aria-labelledby": null,
  "aria-multiselectable": "false",
  "aria-required": "false",
  "role": "listbox",
}
`;

exports[`getListboxAriaAttributes() > should return correct aria attributes with empty messageId and descriptionId 1`] = `
{
  "aria-describedby": null,
  "aria-labelledby": "label-id",
  "aria-multiselectable": "true",
  "aria-required": "true",
  "role": "listbox",
}
`;

exports[`getOptionAriaAttributes() > should return correct aria attributes for isSelected: true, isDisabled: false, isHidden: false and hasValue: false 1`] = `
{
  "aria-disabled": null,
  "aria-hidden": null,
  "aria-label": "Empty value",
  "aria-selected": "true",
}
`;

exports[`getOptionAriaAttributes() > should return correct aria attributes for isSelected: true, isDisabled: false, isHidden: true and hasValue: false 1`] = `
{
  "aria-disabled": null,
  "aria-hidden": "true",
  "aria-label": "Empty value",
}
`;

exports[`getOptionAriaAttributes() > should return correct aria attributes for isSelected: true, isDisabled: true, isHidden: false and hasValue: false 1`] = `
{
  "aria-disabled": "true",
  "aria-hidden": null,
  "aria-label": "Empty value",
  "aria-selected": "true",
}
`;

exports[`getOptionAriaAttributes() > should return correct aria attributes for isSelected: true, isDisabled: true, isHidden: true and hasValue: true 1`] = `
{
  "aria-disabled": "true",
  "aria-hidden": "true",
  "aria-label": null,
}
`;
